--- a/Ycheb_practika/Ycheb_practika/MainWindow.xaml
+++ b/Ycheb_practika/Ycheb_practika/MainWindow.xaml
@@ -5,15 +5,54 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ycheb_practika"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Бред бредовый" Height="655" Width="1352" FontSize="18" FontWeight="Bold"  FontFamily="Gabriola">
     <Grid>
-        <Grid Margin="0,0,20,0">
-            <DataGrid x:Name ="StorageDataGrid" Margin="0,0,390,0"/>
-            <DataGrid x:Name ="StorageDrg" Margin="395,0,0,0"/>
-        </Grid>
-        <Grid Margin="5,0,0,0">
-            <ComboBox x:Name ="StorageComboBox" Margin="23,271,552,111"/>
-            <ComboBox x:Name ="StorageCbx" Margin="416,273,112,111"/>
-        </Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="160*">
+            </RowDefinition>
+            <RowDefinition Height="160*">
+            </RowDefinition>
+            <RowDefinition Height="160*">
+            </RowDefinition>
+            <RowDefinition Height="88*">
+            </RowDefinition>
+            <RowDefinition Height="69*"/>
+            <RowDefinition Height="3*"/>
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*">
+            </ColumnDefinition>
+            <ColumnDefinition Width="114*"/>
+            <ColumnDefinition Width="105*"/>
+            <ColumnDefinition Width="116*"/>
+            <ColumnDefinition Width="169*"/>
+            <ColumnDefinition Width="169*"/>
+            <ColumnDefinition Width="169*">
+            </ColumnDefinition>
+            <ColumnDefinition Width="170*"/>
+            <ColumnDefinition Width="169*">
+            </ColumnDefinition>
+            <ColumnDefinition Width="161*"/>
+            <ColumnDefinition Width="8*"/>
+        </Grid.ColumnDefinitions>
+
+        <DataGrid x:Name ="StorageDataGrid" Grid.ColumnSpan="9" Margin="7,10,10,10" Grid.RowSpan="3" Visibility="Visible" Grid.Column="1"/>
+        <DataGrid x:Name ="StorageDrg" Grid.ColumnSpan="9" Margin="7,10,2,10" Grid.RowSpan="3" Visibility="Hidden" Grid.Column="1"/>
+
+        <ComboBox x:Name ="StorageComboBox" Margin="21,26,24,28" Grid.Row="3" Grid.Column="1" Visibility="Visible" Grid.ColumnSpan="3"/>
+        <ComboBox x:Name ="StorageCbx" Margin="21,20,24,3" Grid.Row="3" Grid.Column="1" Visibility="Hidden" Grid.ColumnSpan="3"/>
+
+        <Button x:Name="pred" Grid.Column="4" Content="пред." HorizontalAlignment="Left" Margin="96,7,0,0" Grid.Row="4" VerticalAlignment="Top" Height="58" Width="132" FontSize="36" FontWeight="Bold" FontFamily="Gabriola" Click="Click_pred" Grid.ColumnSpan="2"/>
+        <Button x:Name="InNewWindow" Grid.Column="6" Content="в новом окне" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="58" Width="132" FontSize="24" FontFamily="Gabriola" FontWeight="Bold" Click="Click_InNewWindow" Margin="99,0,0,0" Grid.ColumnSpan="2"/>
+        <Button x:Name="cled" Grid.Column="8" Content="след." HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="58" Width="132" FontSize="36" FontWeight="Bold"  FontFamily="Gabriola" Click="Click_cled" Margin="102,0,0,0" Grid.ColumnSpan="2"/>
+
+        <Button x:Name="Delete" Content="удалить" Click="Click_Delete" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" Height="29" Width="76" Grid.Column="1" Margin="17,22,0,0"/>
+        <Button x:Name="Add" Content="добавить" Click="Click_Add" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Top" Height="29" Width="76" RenderTransformOrigin="1.132,1.72" Grid.Column="3" Margin="0,22,0,0"/>
+        <Button x:Name="Change" Content="изменить" Click="Click_Change" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Top" Height="29" Width="76" Grid.Column="2" Margin="0,22,0,0"/>
+        
+        <TextBox x:Name="TextBox" Grid.Column="4" HorizontalAlignment="Center" Grid.Row="3" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="994" Grid.ColumnSpan="6" Height="32"/>
     </Grid>
 </Window>
+
+    
